freest/test/prog/Invalid/Typing/WildcardRHS/WildcardRHS.fst
module WildcardRHS where

f : Int
f = _
